# AirConditioningServer

./: Cargo.toml  Rocket.toml
migrations/2021-11-07-005946_create_tables/: down.sql  up.sql
src/: errors.rs  main.rs
src/database/: access.rs  mod.rs  models.rs  schema.rs
src/logic/: cascade.rs  create.rs  describe.rs  mod.rs
src/model/: mod.rs  request.rs  response.rs
src/mounts/: events.rs  mod.rs  registry.rs  relations.rs
